# FastAgent

./: .gitignore  LICENSE  README.md  pyproject.toml  rollout.state.json
docs/: README.md  architecture.md  quickstart.md
examples/: .gitkeep  bench_report.sample.json  eval_dataset.sample.jsonl  fastagent.eval.sample.json  fastagent.trust.sample.json  plugin_registry.sample.json  redteam.sample.jsonl  shadow_samples.sample.jsonl
examples/architect-format-test/: README.md
examples/architect-openai-fallback/: README.md
examples/fix-check/: README.md
examples/hardened-agent/: README.md
examples/hardening-final/: README.md
examples/hardening-smoke/: README.md
examples/hyper-agent/: README.md  fastagent.plugins.json
examples/innovation-agent/: README.md
examples/legal-agent/: README.md  requirements.txt
fastagent/: __init__.py
fastagent/cli/: __init__.py  (+1 more)
scripts/: e2e.ps1  smoke-architect.ps1
tests/: test_approval_cli.py  test_approval_state.py  test_autopilot_cli.py  test_autopilot_policy.py  test_canary_cli.py  test_canary_shadow_cli.py  test_cli_commands.py  test_cli_plugins.py  test_config.py  test_escalation.py  test_eval_cli.py  test_init_ci_cli.py  test_install_plugin_cli.py  test_plugin_registry.py  test_plugin_trust_policy.py  test_plugins_manifest.py  test_project_architect.py  test_project_generator.py  test_redteam_cli.py  test_release_ready_cli.py  test_rollback_webhook_cli.py  test_rollout_apply_cli.py  test_rollout_controller_cli.py  test_signing_cli.py  test_trace_replay.py  test_validate_artifacts_cli.py  test_verify_audit_cli.py
(+155 files in other folders)
