[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "fastagent"
version = "0.20.0"
description = "AI Agent Backend Framework for FastAPI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "FastAgent Contributors" }
]
dependencies = [
  "typer>=0.12.5",
  "rich>=13.9.4",
  "questionary>=2.1.0",
  "jinja2>=3.1.4",
  "httpx>=0.27.2",
  "cryptography>=43.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3"
]

[project.scripts]
fastagent = "fastagent.cli.main:run"
FastAgent = "fastagent.cli.main:run"

[tool.hatch.build]
include = [
  "fastagent/**",
  "README.md",
  "LICENSE",
  "docs/**"
]

[tool.hatch.build.targets.wheel]
packages = ["fastagent"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
